Fix home path broken layout

--- a/src/routes/home/style.css
+++ b/src/routes/home/style.css
@@ -1,3 +1,9 @@
+.intro {
+  display: flex;
+  align-items: center;
+  vertical-align: middle;
+  justify-content: center;
+}
 
 .intro__banner img {
   width: 600px;
